2009-02-25 Ian Rutt
 * Bump version to 1.0.17 (new development series)

2009-02-25 Ian Rutt
 * configure.in: bump version to 1.0.16
 * This release is skipped (i.e. not on website) - it only exists to make
   a fork for the development of Glimmer 2.0 (This is the 1.9.x branch)
 * NEWS: update

2009-02-25 Ian Rutt
 * Added additional subroutine for array allocation (3d integer)

2008-12-02 Ian Rutt
 * Bump version to 1.0.15 (new development series)
	
2008-12-02 Ian Rutt
 * configure.in: bump version to 1.0.14
 * NEWS: update
	
2008-12-02 Ian Rutt
 * Corrected index transposition in glide_temp.F90 (calcbpmp). Thanks to
 Jonathan Gregory for finding and fixing this.

2008-11-30 Ian Rutt
 * Changed all <config.inc> to "config.inc", to conform with
   strict requirements of gfortran 4.4.0

2008-11-23 Ian Rutt
 * Bump version to 1.0.13 (new development series)

2008-11-23 Ian Rutt
 * configure.in: bump version to 1.0.12
 * NEWS: update

2008-09-24 Ian Rutt
 * Fixed minor build bug in glide_thck.F90. Thanks to Christian Ferrer for
 identifying this one.

2008-07-23 Ian Rutt
 * Bump version to 1.0.11 (new development series)
	
2008-07-23 Ian Rutt
 * configure.in: bump version to 1.0.10
 * NEWS: update
	
2008-07-23 Ian Rutt
 * Changed basal temperature to be PMP if ice is floating

2008-07-08 Ian Rutt
 * Added option to adjust basal water depth smoothing strength
 * Added option to turn on sliding when T=Tpmp
 * Added option to include basal melt rate in continuity equation
 * Various comments and bits of tidying up

2008-04-03 Ian Rutt
 * Corrected comments in GLINT API - wrong units for water_in and
 water_out. Spotted by Jeremy Fyke.

2008-04-02 Ian Rutt
 * Fixed build issue with INTENT in gfortran. Thanks to Maria Kotjakova
   for pointing this out.

2008-03-14 Ian Rutt
 * Bump version to 1.0.9 (new development series)

2008-03-14 Ian Rutt
 * configure.in: bump version to 1.0.8
 * NEWS: update
	
2008-03-13 Ian Rutt